2025-09-25  Zhengyi Fu  <i@fuzy.me>

	Fix error `C-<space>' undefined

	* site-lisp/modify-other-keys.el
	(modify-other-keys--setup-input-decode-map): Use SPC instead of
	<space>.

2025-09-25  Zhengyi Fu  <i@fuzy.me>

	Improve message-insert-ring

	* init.el (message-ring-insert): Use `ring-remove+insert+extend'
	to make sure the message is not duplicated.
	(message-ring-inhibit-regexps): Update default ignore regexps.

2025-09-25  Zhengyi Fu  <i@fuzy.me>

	Workaround an Emacs bug

	* init.el: Do not reenable `lin-global-mode' when reloading
	init.el.

2025-09-25  Zhengyi Fu  <i@fuzy.me>

	* early-init.el: Only enable igc idle timer when supported.

2025-09-25  Zhengyi Fu  <i@fuzy.me>

	New command `copy-message'

	* init.el (message-ring, message-ring-insert)
	(message-ring-inhibit-regexps, message-ring-insert-functions): New
	vars.
	(message-ring-ignore-keystroke, message-ring-inhibit)
	(message-ring-insert): New functions.  Added to
	`message-ring-insert-functions'.
	(message-insert-ring): New function.  Added to
	`set-message-functions'.
	(message-ring-read): New function.
	(copy-message): New command.  Bound C-M-S-w to it.

	* site-lisp/pp-posframe.el (pp-posframe-display-value): Do not
	include `=>' in the message.

2025-09-25  Zhengyi Fu  <i@fuzy.me>

	Support emacs build without threads

	* init.el (diff-hl-update-async): Set to the value of (fboundp
	'make-thread).

2025-09-24  Zhengyi Fu  <i@fuzy.me>

	* init.el (help-fns-edit-variable, list-timers): Enable commands.

2025-09-24  Zhengyi Fu  <i@fuzy.me>

	* init.el (dotemacs-theme-refresh): Use modus-themes-with-colors.

2025-09-24  Zhengyi Fu  <i@fuzy.me>

	Update dotemacs-core macros

	* site-lisp/dotemacs-core.el (delq!, remq!): New macros.
	(alist-del!): Use a special keyword as the default value to avoid
	conflicts.
	* init.el: Use `delq!'.

2025-09-24  Zhengyi Fu  <i@fuzy.me>

	Update tramp settings

	* init.el: Enable connection-local profile
	`remote-explicit-shell-file-name' and